--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: Master of Science (MSc)
+  uni: McGill University, Montreal
+  year: 2012 &mdash; 2015
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    - award: DFW scholarship (Summer 2013)
+  summary: 
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: Bachelor of Engineering (B.E)
+  uni: Univeristy of Mysore
+  year: 2001
+  award: First Class with Distinction
+  summary: 
